Footer mas trabajado

--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
 
   <!-- Footer section -->
   <footer class="footer">
-    <p>Website made with ❤️ at Le Wagon</p>
+    <div class="footer-links-container"> 
+      <div class="footer-link-div">
+        <h3>Contact us</h3>
+        <a href="#">Send Mail</a>
+        <a href="#">Phones list</a>
+      </div>
+      <div class="footer-link-div">
+        <h3>Others</h3>
+        <a href="#">FAQs</a>
+        <a href="#">Legals</a>
+      </div>
+    </div>
+    <div class="footer-description"><p>Gianluca Piriz | Website made with ❤️ at <a target="_blank" href="https://www.lewagon.com/es/buenos-aires">Le Wagon</a></p></div>
   </footer>
 </body>
 </html>
