edicion de texto de la pagina

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <!-- Banner section -->
   <section class="banner">
     <h1>Change your life, travel to learn</h1>
-    <p>Learn with us travelling abroad! </p>
-    <a href="https://www.lewagon.com" target="_blank" class="btn">Apply now</a>
+    <p>Learn English with us travelling abroad! </p>
+    <a href="https://www.lewagon.com" target="_blank" class="btn">Sign up!</a>
   </section>
 
   <!-- Container -->
@@ -26,21 +26,21 @@
       <div class="card">
         <img src="images/toronto.jpg" alt="">
         <h3>Toronto</h3>
-        <p>Learn english with us in Toronto, Canada.</p>
+        <p>Learn English with us in Toronto, Canada.</p>
       </div>
 
       <!-- London card -->
       <div class="card">
         <img src="images/london.jpg" alt="">
         <h3>London</h3>
-        <p>Learn english with us in London, UK.</p>
+        <p>Learn English with us in London, UK.</p>
       </div>
 
       <!-- Melbourne card -->
       <div class="card">
         <img src="images/melbourne.jpg" alt="">
         <h3>Melbourne</h3>
-        <p>Learn english with us in Melbourne, Australia.</p>
+        <p>Learn English with us in Melbourne, Australia.</p>
       </div>
     </div>
   </section>
